# orchestra

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum
docker/: .gitignore  docker-compose-for-mac.yaml  docker-compose-swagger-ui.yaml  docker-compose.yaml  envoy-for-mac.yaml  envoy.yaml  ping
docker/envoy_config/: exchange.yaml  rollup.yaml
proto/exchange/: matchengine.pb  matchengine.proto  matchengine.swagger.json
proto/rollup/: rollup.pb  rollup.proto  rollup.swagger.json
src/rpc/: mod.rs
src/rpc/exchange/: matchengine.rs
src/rpc/rollup/: mod.rs  rollup_state.rs
