[package]
name = "orchestra"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
serde = { version = "1.0.124", features = [ "derive" ] }
tonic = "0.4.0"

[build-dependencies]
tonic-build = "0.4.0"

[features]
exchange = [ ]
rollup = [ ]
