[package]
name = "orchestra"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8.0"
serde = { version = "1.0.124", features = [ "derive" ] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

[features]
exchange = [ ]
rollup = [ ]
